--- a/jumpscale/packages/farmmanagement/frontend/views/farmmanagement/farmmanagement.html
+++ b/jumpscale/packages/farmmanagement/frontend/views/farmmanagement/farmmanagement.html
@@ -45,7 +45,7 @@
                 <v-icon small> fa-cog </v-icon>
               </v-btn>
 
-              <v-btn color="primary" small @click="setDefaultPrice = true">
+              <v-btn color="primary" small @click="showSetFarmPrice = true">
                 Set farm prices
               </v-btn>
 
@@ -53,7 +53,7 @@
                 Add a Deal
               </v-btn>
 
-              <v-dialog v-model="setDefaultPrice" scrollable max-width="700px">
+              <v-dialog v-model="showSetFarmPrice" scrollable max-width="700px">
                 <v-card style="width: 100%">
                   <v-card-title
                     primary-title
@@ -73,19 +73,19 @@
                       <v-row>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model.number="default_price.cu"
+                            v-model.number="farm_price.cu"
                             label="CU"
                           ></v-text-field>
                         </v-col>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model.number="default_price.su"
+                            v-model.number="farm_price.su"
                             label="SU"
                           ></v-text-field>
                         </v-col>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model.number="default_price.ipv4u"
+                            v-model.number="farm_price.ipv4u"
                             label="IPv4U"
                           ></v-text-field>
                         </v-col>
@@ -102,14 +102,14 @@
                     >
                       {{priceUpdate.message}}
                     </v-alert>
-                    <v-btn text class="mr-3" @click="setDefaultPrice = false"
+                    <v-btn text class="mr-3" @click="showSetFarmPrice = false"
                       >Cancel</v-btn
                     >
                     <v-btn
                       text
                       color="secondary"
                       class="mr-3"
-                      @click="setDefault(default_price.cu, default_price.su, default_price.ipv4u)"
+                      @click="setFarmPrice(farm_price.cu, farm_price.su, farm_price.ipv4u)"
                       >Save</v-btn
                     >
                   </v-card-actions>
@@ -121,7 +121,7 @@
                 persistent
                 max-width="700px"
                 @keydown.esc="openAddCustomModel = false"
-                
+
               >
                 <v-card>
                   <v-card-title
@@ -212,7 +212,7 @@
                 <v-icon small> fa-cog </v-icon>
               </v-btn>
 
-              <v-btn color="primary" small @click="setDefaultPrice = true">
+              <v-btn color="primary" small @click="showSetFarmPrice = true">
                 Set default prices
               </v-btn>
 
@@ -220,7 +220,7 @@
                 Add custom price
               </v-btn>
 
-              <v-dialog v-model="setDefaultPrice" scrollable max-width="700px" @keydown.esc="setDefaultPrice = false"
+              <v-dialog v-model="showSetFarmPrice" scrollable max-width="700px" @keydown.esc="showSetFarmPrice = false"
 >
                 <v-card style="width: 100%">
                   <v-card-title
@@ -241,19 +241,19 @@
                       <v-row>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model="default_price.cu"
+                            v-model="farm_price.cu"
                             label="CU"
                           ></v-text-field>
                         </v-col>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model="default_price.su"
+                            v-model="farm_price.su"
                             label="SU"
                           ></v-text-field>
                         </v-col>
                         <v-col cols="12" sm="4">
                           <v-text-field
-                            v-model="default_price.ipv4u"
+                            v-model="farm_price.ipv4u"
                             label="IPv4U"
                           ></v-text-field>
                         </v-col>
@@ -270,14 +270,14 @@
                     >
                       {{priceUpdate.message}}
                     </v-alert>
-                    <v-btn text class="mr-3" @click="setDefaultPrice = false"
+                    <v-btn text class="mr-3" @click="showSetFarmPrice = false"
                       >Cancel</v-btn
                     >
                     <v-btn
                       text
                       color="secondary"
                       class="mr-3"
-                      @click="setDefault(default_price.cu, default_price.su, default_price.ipv4u)"
+                      @click="setFarmPrice(farm_price.cu, farm_price.su, farm_price.ipv4u)"
                       >Save</v-btn
                     >
                   </v-card-actions>
