Fix update custom price

--- a/jumpscale/packages/farmmanagement/frontend/components/cspricestable/cspricestable.html
+++ b/jumpscale/packages/farmmanagement/frontend/components/cspricestable/cspricestable.html
@@ -70,7 +70,7 @@
                     <v-btn
                       color="black darken-1"
                       text
-                      @click="openEditModal = false"
+                      @click="closeEditModal"
                       >Cancel</v-btn
                     >
                     <v-btn color="yellow darken-1" text @click="editPrice"
@@ -97,7 +97,7 @@
                       @click="openDeleteModal = false"
                       >Cancel</v-btn
                     >
-                    <v-btn color="red darken-1" text @click="deleteNode()"
+                    <v-btn color="red darken-1" text @click="deleteprice"
                       >Delete</v-btn
                     >
                   </v-card-actions>
