--- a/jumpscale/packages/farmmanagement/frontend/components/nodeinfo/nodeinfo.html
+++ b/jumpscale/packages/farmmanagement/frontend/components/nodeinfo/nodeinfo.html
@@ -18,6 +18,12 @@
         </v-flex>
       </v-row>
       <v-row>
+        <v-flex xs3 class="text-left pr-2">Hostname </v-flex>
+        <v-flex class="text-truncate font-weight-bold">
+          <span>{{node.hostname}}</span>
+        </v-flex>
+      </v-row>
+      <v-row>
         <v-flex xs3 class="text-left pr-2">Farmer</v-flex>
         <v-flex class="text-truncate font-weight-bold">
           <span>{{node.farmer.name}}</span>
