Handle the farm loading error

--- a/jumpscale/packages/farmmanagement/frontend/views/farmedit/farmedit.html
+++ b/jumpscale/packages/farmmanagement/frontend/views/farmedit/farmedit.html
@@ -27,7 +27,7 @@
             </v-text-field>
           </v-col>
           <v-col cols="12" sm="4">
-            <v-text-field v-model="wallet.asset" label="Asset Code"></v-text-field>
+            <v-text-field v-model="wallet.asset" label="Asset Code" disabled></v-text-field>
           </v-col>
           <v-col>
             <v-btn @click="removeWallet(farm, i)" fab dark small color="warning">
