--- a/jumpscale/packages/farmmanagement/frontend/views/farmmanagement/farmmanagement.css
+++ b/jumpscale/packages/farmmanagement/frontend/views/farmmanagement/farmmanagement.css
@@ -4,3 +4,40 @@
 table tr td{
     cursor: pointer;
 }
+
+.custom-upgrade {
+animation: upgrade 1s infinite;
+display: flex;
+}
+@-moz-keyframes upgrade {
+from {
+    transform: rotate(0);
+}
+to {
+    transform: rotate(360deg);
+}
+}
+@-webkit-keyframes upgrade {
+from {
+    transform: rotate(0);
+}
+to {
+    transform: rotate(360deg);
+}
+}
+@-o-keyframes upgrade {
+from {
+    transform: rotate(0);
+}
+to {
+    transform: rotate(360deg);
+}
+}
+@keyframes upgrade {
+from {
+    transform: rotate(0);
+}
+to {
+    transform: rotate(360deg);
+}
+}
