--- a/jumpscale/packages/auth/bottle/templates/login.html
+++ b/jumpscale/packages/auth/bottle/templates/login.html
@@ -4,8 +4,11 @@
 
 {% block content %}
 <br />
-<span>You tried to access a protected web page, and that action requires you to login using one of our supported
-    idenitification services listed below.</span>
+
+
+<p>Accessing this page requires <a href="https://library.threefold.me/info/threefold#/tokens/threefold__threefold_connect">Threefold connect.</a>
+Threefold Connect is a wallet to hold your digital currencies, an authenticator to authenticate you on Threefold Grid, and it has the latest news about Threefold.
+</p>
 <br />
 <div class="row justify-content-md-center">
     <div class="col-sm-4">
@@ -15,11 +18,15 @@
             <i class="fa fa-{{provider}}"></i> {{provider}}
         </a>
         {% endfor %}
-
+        <div>
+        <a class="installlink" href="https://apps.apple.com/us/app/3bot-login/id1459845885"><i class="fab fa-apple"></i>Install on iOS</a>
+        <a class="installlink" href="https://play.google.com/store/apps/details?id=org.jimber.threebotlogin&hl=en_US"><i class="fab fa-google-play"></i>Install on Android</a>
         <a class="btn btn-block btn-social btn-vk text-center"
             href="/auth/login?provider=3bot&{% if next_url %}next_url={{next_url}}{% endif %}">
             <span class="bot"></span>Login via ThreeFold Connect
         </a>
+        </div>
+
     </div>
 </div>
 
