--- a/jumpscale/packages/auth/static/css/style.css
+++ b/jumpscale/packages/auth/static/css/style.css
@@ -66,7 +66,9 @@ body {
 .bot:before {
     content: url("/auth/static/img/3botlogin.png");
 }
-
+.installlink:before{
+    color: white;
+}
 .card {
     background-color: transparent;
 }
