Update links style

--- a/jumpscale/packages/auth/bottle/templates/login.html
+++ b/jumpscale/packages/auth/bottle/templates/login.html
@@ -6,7 +6,7 @@
 <br />
 
 
-<p>Accessing this page requires <a href="https://library.threefold.me/info/threefold#/tokens/threefold__threefold_connect">Threefold connect.</a>
+<p>Accessing this page requires <a href="https://library.threefold.me/info/threefold#/tokens/threefold__threefold_connect">Threefold Connect.</a><br />
 Threefold Connect is a wallet to hold your digital currencies, an authenticator to authenticate you on Threefold Grid, and it has the latest news about Threefold.
 </p>
 <br />
