--- a/jumpscale/packages/auth/bottle/templates/home.html
+++ b/jumpscale/packages/auth/bottle/templates/home.html
@@ -30,7 +30,7 @@
             <div class="intro-text justify-content-center">
                 <div class="row">
                     <div class="col-sm">
-                        <img style="padding-top:60px !important" src="/auth/static/img/3bot_robot.png" alt="3Bot">
+                        <img style="padding-top:60px !important" src="/auth/static/img/3bot_robot.png" alt="3Bot" height="300">
                     </div>
                 </div>
                 <br />
