--- a/jumpscale/packages/auth/bottle/templates/login.html
+++ b/jumpscale/packages/auth/bottle/templates/login.html
@@ -19,8 +19,14 @@ Threefold Connect is a wallet to hold your digital currencies, an authenticator 
         </a>
         {% endfor %}
         <div>
-        <a style="margin: 0 10px;" class="installlink" target="_blank" href="https://apps.apple.com/us/app/3bot-login/id1459845885"><i style="padding-right: 5px;" class="fab fa-apple"></i>Install on iOS</a>
-        <a class="installlink" target="_blank" href="https://play.google.com/store/apps/details?id=org.jimber.threebotlogin&hl=en_US"><i style="padding-right: 5px;" class="fab fa-google-play"></i>Install on Android</a>
+        <div class="downloads">
+            <a target="_blank" href="https://apps.apple.com/us/app/3bot-login/id1459845885">
+                <img src="/auth/static/img/app_store.png" alt="app store" height="60"/>
+            </a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=org.jimber.threebotlogin&hl=en_US">
+                <img src="/auth/static/img/google_play.png" alt="google play" height="89"/>
+            </a>
+        </div>
         <a style="margin-top: 15px;" class="btn btn-block btn-social btn-vk text-center"
             href="/auth/login?provider=3bot&{% if next_url %}next_url={{next_url}}{% endif %}">
             <span class="bot"></span>Login via ThreeFold Connect
